speed up code preview

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <h2>PROJECTS</h2>
 <p>
 1. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
-<tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
+<tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
 <section>
 <tableau-viz id="tableauViz"
 src="https://public.tableau.com/views/incidentcounts/Sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link"
