added visibility for project 3

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ toolbar="bottom" hide-tabs>
 </section>
 </p>
 
+3. Building Models From Scratch <br>
+<tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a> | html code </tab> <br>
+<tab> Q: What are some similarities and differences of machine learning methods? What are their limitations?</tab>
+
 <!-- New project under construction! :D -->
 <!-- <p>
 3. Investigating Urban Land Expansion <br>
