updated code for linear regression

--- a/html/building-models-from-scratch/linear_regression.html
+++ b/html/building-models-from-scratch/linear_regression.html
@@ -7493,8 +7493,8 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>source: <a href="https://shangjingbo1226.github.io/teaching/2022-winter-DSC190-DM">https://shangjingbo1226.github.io/teaching/2022-winter-DSC190-DM</a></p>
-<p>Download nutrition facts for McDonalds <a href="https://www.kaggle.com/mcdonalds/nutrition-facts">https://www.kaggle.com/mcdonalds/nutrition-facts</a>.</p>
+<p>Source deliverable: <a href="https://shangjingbo1226.github.io/teaching/2022-winter-DSC190-DM">Data Mining - Professor Shang from the University of California San Diego</a></p>
+<p>Download <a href="https://www.kaggle.com/mcdonalds/nutrition-facts">nutrition facts</a> for McDonalds</p>
 </div>
 </div>
 </div>
