edited proj section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </blockquote>
 <h2>PROJECTS</h2>
 <p>
-1. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
+1. San Diego Blue Line Trolley: Property Values, Police Proximity, Crime Rates <br>
 <tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
 <section>
 <tableau-viz id="tableauViz"
@@ -147,7 +147,7 @@ toolbar="bottom" hide-tabs>
 <br>
 </p>
 <p>
-2. Onto Climate Resilience <br>
+2. Climate Resilience Tools: Beyond Knowing <br>
 <tab>summary pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
@@ -155,7 +155,7 @@ toolbar="bottom" hide-tabs>
 </section>
 </p>
 
-3. Building Models From Scratch <br>
+3. Building Models From Scratch: A Primer on Practicial Awareness and Implementation <br>
 <tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a></tab> <br>
 <tab> Q: <tab> <a href="https://www.notion.so/What-does-it-mean-to-learn-and-succeed-at-tasks-Hal-Daum-III-62e91b599e3347e5a5521373e23d2985", target="_blank"> What does it mean to learn? What are some similarities and differences of machine learning methods? What are their limitations? </a></tab>
 
