--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ toolbar="bottom" hide-tabs>
 </section>
 </p>
 
-3. Building Models From Scratch: A Primer on Practicial Awareness and Implementation <br>
+3. Building Models From Scratch: A Primer on Practical Awareness and Implementation <br>
 <tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a></tab> <br>
 <tab> Q: <tab> <a href="https://www.notion.so/What-does-it-mean-to-learn-and-succeed-at-tasks-Hal-Daum-III-62e91b599e3347e5a5521373e23d2985", target="_blank"> What does it mean to learn? What are some similarities and differences of machine learning methods? What are their limitations? </a></tab>
 
