--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	}
 	/* How do I update the footnote? */
 	body::after {
-		content: 'Last Updated August 2024';
+		content: 'Last Updated September 2024';
 		display: block;
 		position: relative;
 		height: 10px;
@@ -138,6 +138,7 @@
 <p>
 1. San Diego Blue Line Trolley: Property Values, Police Proximity, Crime Rates <br>
 <tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
+<tab> Langauges and Tools: Python, Seaborn, Matplotlib, Geopandas, Tableau</tab>
 <section>
 <tableau-viz id="tableauViz"
 src="https://public.tableau.com/views/incidentcounts/Sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link"
@@ -149,6 +150,7 @@ toolbar="bottom" hide-tabs>
 <p>
 2. Climate Resilience Tools: Beyond Knowing <br>
 <tab>summary pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
+<tab>Concepts and Tools: Biases, Explainability, Interpretability </tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
 	border: 0px none;" allow="web-share; clipboard-write"></iframe>
@@ -157,7 +159,9 @@ toolbar="bottom" hide-tabs>
 
 3. A Primer on Machine Learning Models: For Practical Awareness and Implementation <br>
 <tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a></tab> <br>
+<tab> Langauges and Tools: Python, Scitkit-learn, Statsmodels, Matplotlib, Scitkit-learn, PyTorch </tab> <br>
 <tab> Q: <tab> <a href="https://www.notion.so/What-does-it-mean-to-learn-and-succeed-at-tasks-Hal-Daum-III-62e91b599e3347e5a5521373e23d2985", target="_blank"> What does it mean to learn? What are some similarities and differences of machine learning methods? What are their limitations? </a></tab>
+
 
 <!-- New project under construction! :D -->
 <!-- <p>
@@ -176,45 +180,45 @@ toolbar="bottom" hide-tabs>
 <br>
 </p> -->
 
-<h2>COURSES</h2>
+<!-- <h2>COURSES</h2> -->
 <!-- Math courses -->
-<p><b><i>Probability, Stochastic Processes I, Stochastic Processes II</i></b></p>
+<!-- <p><b><i>Probability, Stochastic Processes I, Stochastic Processes II</i></b></p>
 <p> This is a  three-course sequence. The first part covers key topics in probability theory including, conditional probability, independence, random
 	variables, distributions, expectation, variance, Baye's Rule, Law of Total Probability, Law of Large Numbers (LLN) and Central Limit Theorem (CLT). 
 	The second and the third part cover topics in distribution of martingale, random sums, Markov chain, n-step transition probability, successive maxima, one-dimensional random walks, 
 	successive runs, branching process, Gambler's Ruin, limiting probability distribution, stationary distribution, recurrent and transient states, and Poisson process. 
-</p>
-<p><b><i>Exploratory Data Analysis, and Inference with Mathematical Statistics</i></b></p>
+</p> -->
+<!-- <p><b><i>Exploratory Data Analysis, and Inference with Mathematical Statistics</i></b></p>
 <p>
 	This is a project-based course that uses Python modules and libraries to automate statistical inferences and create 2D and 3D visualizations. The topics that were covered
 	were regression analysis for a single variable and multiple variables, interpretation of regression analysis and coefficients, diagnostics for normality and independence of residuals and heteroscedasticity,
 	generalized hypothesis testing, (multinomial) logistic regression, variable selection using adjusted R squared, AIC, and BIC, cross-validation, and stepwise selection.
-</p>
-<p><b><i>Hidden Data in Random Matrices with Numerical Linear Algebra</i></b></p>
+</p> -->
+<!-- <p><b><i>Hidden Data in Random Matrices with Numerical Linear Algebra</i></b></p>
 <p>
 	This is a rigorous course that builds the understanding of the principal component analysis (PCA) using mathematical theories. It was completed with a final project to apply PCA to find signals among noisy, large datasets. The topics covered were singular value
 	decomposition for matrices,  least squares method, affine subspaces, unbiased estimators, Wigner's semicircle law, and Marchenko-Pastur laws. This course was taken after Numerical Linear Algebra, which cover topics on
 	projections, orthogonality, eigendecomposition, and positive definite semisimple matrices, which I found to be helpful for theoretical connections.
-</p>
+</p> -->
 <!-- Computer Science Courses -->
-<p><b><i>Deep Learning</i></b></p>
+<!-- <p><b><i>Deep Learning</i></b></p>
 <p>
 	This was a competitive, project-based course. The topics covered were the fundamentals of deep neural networks such as linear regression, multi-layer perceptrons, backpropagation, automatic differentiation, convolution neural networks, recurrent neural networks, 
 	and transformers. 
-</p>
+</p> -->
 
 <!-- Interdisciplinary Courses -->
-<p><b><i>Data Science in Practice</i></b></p>
+<!-- <p><b><i>Data Science in Practice</i></b></p>
 <p>
 	This is a project-based course. The topics covered were presenting robust, clear visualizations using <code>seaborn</code> and <code>matplotlib</code>, applications of descriptive, exploratory, and inferential anlayses, non-parametric statistics, bootstrapping (resampling), sentiment analysis using Term Frequency-Inverse Document Frequency (TF-IDF), machine learning approaches (supervised vs unsupervised), train-validate-test sets, k-folds cross validation, 
 	data processing and transformation using <code>scikit-learn</code>, feature engineering, searching for best hyperparameters, model selection, support vector machine (SVM), evaluating accuracy, sensitivity, and specificity with confusion matrices, and geospatial analysis.
 
-</p>
-<p><b><i>Data Ethics</i></b></p>
+</p> -->
+<!-- <p><b><i>Data Ethics</i></b></p>
 <p>
 This is a project-based course. There are three in-quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neutrality Thesis, problem defintion, values, data acquisition, privacy, forms of consent: acts of consent, informed consent, and 
 educated consent, biases (e.g. deviation from a social or statistical norm), comparative versus noncomparative justice, substantive versus procedural fairness, and Goodhart's Law. 
-</p>
+</p> -->
 <h2>WAYS TO REACH ME </h2>
 <p>
 <a href="https://github.com/eemilycchen" target="_blank"><i class="fab fa-github" style='font-size:30px'></i></a> 
