--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <p>
 2. Climate Resilience Tools: Beyond Knowing <br>
-<tab>summary pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
+<tab>summary pdf, pptx | webage (under construction) </tab> <br>
 <tab>Concepts and Tools: Biases, Explainability, Interpretability </tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
