--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	}
 	/* How do I update the footnote? */
 	body::after {
-		content: 'Last Updated September 2024';
+		content: 'Last Updated October 2024';
 		display: block;
 		position: relative;
 		height: 10px;
@@ -136,7 +136,7 @@
 </blockquote>
 <h2>PROJECTS</h2>
 <p>
-1. San Diego Blue Line Trolley: Property Values, Police Proximity, Crime Rates <br>
+1. San Diego Blue Line Trolley: Property Values, Police Proximity, and Crime Rates <br>
 <tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
 <tab> Langauges and Tools: Python, Seaborn, Matplotlib, Geopandas, Tableau</tab>
 <section>
