--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
 <blockquote>
 	<h2>ABOUT</h2>
 	<p>
-	I graduated with a Bachelor of Science degree in Applied Mathematics, with a minor in Computer Science at the University of California San Diego. For four years as 
-	a tutor and instructor, I vigilantly balanced between problem-solve mathematical problems and adapting to a wide diversity of students. 
-	My studies fostered my passion in mathematics and transpired my direction toward uncharted areas of artifical intelligence. 
+	Hi, I am Emily and here are some of the projects I've been working on! 
 	</p></div>
 </blockquote>
 <h2>PROJECTS</h2>
