updated about and resources

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <blockquote>
 	<h2>ABOUT</h2>
 	<p>
-	Hi, I am Emily and here are some of the projects I've been working on! 
+	Hi, feel free to checkout some of these projects I've been working on!
 	</p></div>
 </blockquote>
 <h2>PROJECTS</h2>
@@ -154,12 +154,15 @@ toolbar="bottom" hide-tabs>
 	border: 0px none;" allow="web-share; clipboard-write"></iframe>
 </section>
 </p>
-
+<p>
 3. A Primer on Machine Learning Models: For Practical Awareness and Implementation <br>
 <tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a></tab> <br>
 <tab> Langauges and Tools: Python, Scitkit-learn, Statsmodels, Matplotlib, Scitkit-learn, PyTorch </tab> <br>
 <tab> Q: <tab> <a href="https://www.notion.so/What-does-it-mean-to-learn-and-succeed-at-tasks-Hal-Daum-III-62e91b599e3347e5a5521373e23d2985", target="_blank"> What does it mean to learn? What are some similarities and differences of machine learning methods? What are their limitations? </a></tab>
-
+</p>
+<h2><br>RESOURCES</h2> 
+<!-- Cheatsheet section -->
+<tab> SQL pdf, html | R pdf, html | Tableau html </tab>
 
 <!-- New project under construction! :D -->
 <!-- <p>
