added sql info from module 1

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <h2><br>RESOURCES</h2> 
 <!-- Cheatsheet section -->
-<tab> SQL pdf, html | R pdf, html | Excel pdf | Tableau pdf, html </tab>
+<tab> SQL <a href="cheatsheets/SQL_cheatsheet.pdf" target="_blank", download>pdf</a>, html | R pdf, html | Excel pdf | Tableau pdf, html </tab>
 
 
 <h2>WAYS TO REACH ME </h2>
