fixed all pdf displays

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <h2>PROJECTS</h2>
 <p>
 1. San Diego Blue Line Trolley: Property Values, Police Proximity, and Crime Rates <br>
-<tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
+<tab>summary <a href="https://eemilycchen.github.io/home/visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
 <tab> Langauges and Tools: Python, Seaborn, Matplotlib, Geopandas, Tableau</tab>
 <section>
 <tableau-viz id="tableauViz"
@@ -162,7 +162,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <h2><br>RESOURCES</h2> 
 <!-- Cheatsheet section -->
-<tab> SQL <a href="cheatsheets/SQL_cheatsheet.pdf" target="_blank">pdf</a>, html | R pdf, html | Excel pdf | Tableau pdf, html </tab>
+<tab> SQL <a href="https://eemilycchen.github.io/home/cheatsheets/SQL_cheatsheet.pdf" target="_blank">pdf</a>, html | R pdf, html | Excel pdf | Tableau pdf, html </tab>
 
 
 <h2>WAYS TO REACH ME </h2>
