--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	}
 	/* How do I update the footnote? */
 	body::after {
-		content: 'Last Updated February 2025';
+		content: 'Last Updated August 2025';
 		display: block;
 		position: relative;
 		height: 10px;
@@ -146,20 +146,11 @@ toolbar="bottom" hide-tabs>
 <br>
 </p>
 <p>
-2. Climate Resilience Tools: Beyond Knowing <br>
-<tab>summary pdf, pptx | webage (under construction) </tab> <br>
-<tab>Concepts and Tools: Biases, Explainability, Interpretability </tab> <br>
-<section>
-	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
-	border: 0px none;" allow="web-share; clipboard-write"></iframe>
-</section>
+Machine Learning Explorations <br>
+<tab> Given a McDonald's nutrition dataset, how can we implement linear regression to predict the calories of an item? <a href="https://eemilycchen.github.io/home/html/building-models-from-scratch/linear_regression.html">html</a>
+</tab>
 </p>
-<p>
-3. A Primer on Machine Learning Models: For Practical Awareness and Implementation <br>
-<tab> summary pdf, pptx |  <a href="https://github.com/eemilycchen/Building-Models-From-Scratch" target="_blank">source code</a></tab> <br>
-<tab> Langauges and Tools: Python, Scitkit-learn, Statsmodels, Matplotlib, Scitkit-learn, PyTorch </tab> <br>
-<tab> Q: <tab> <a href="https://www.notion.so/What-does-it-mean-to-learn-and-succeed-at-tasks-Hal-Daum-III-62e91b599e3347e5a5521373e23d2985", target="_blank"> What does it mean to learn? What are some similarities and differences of machine learning methods? What are their limitations? </a></tab>
-</p>
+
 <h2><br>RESOURCES</h2> 
 <!-- Cheatsheet section -->
 <tab> SQL <a href="https://eemilycchen.github.io/home/cheatsheets/SQL_cheatsheet_mod_6.pdf" target="_blank">pdf</a>, <a href="html/sql_nb.html" target="_blank">html code</a> | R pdf, html code | Excel pdf | Tableau pdf, html </tab>
