adde more details to new project

--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
 	a:active {
 		color: green;
 	}
-
+	/* How to add a green dot?*/
+	.dot {
+	height: 10px;
+	width: 10px;
+	background-color: #32CD32;
+	border-radius: 50%;
+	display: inline-block;
+	}
 	
 	/* How do change colors for dark mode? */
 	@media (prefers-color-scheme: dark) {
@@ -134,7 +141,7 @@
 </blockquote>
 <h2>PROJECTS</h2>
 <p>
-1. San Diego Blue Line Trolley: Property Values, Police Proximity, and Crime Rates <br>
+San Diego Blue Line Trolley: Property Values, Police Proximity, and Crime Rates <br>
 <tab>summary <a href="https://eemilycchen.github.io/home/visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank">pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> | <a href="html/blue-line-trolley/blue-line-trolley.html" target="_blank">html code</a> </tab> <br>
 <tab> Langauges and Tools: Python, Seaborn, Matplotlib, Geopandas, Tableau</tab>
 <section>
@@ -146,9 +153,10 @@ toolbar="bottom" hide-tabs>
 <br>
 </p>
 <p>
-Machine Learning Explorations <br>
-<tab> Given a McDonald's nutrition dataset, how can we implement linear regression to predict the calories of an item? <a href="https://eemilycchen.github.io/home/html/building-models-from-scratch/linear_regression.html">html</a>
+Machine Learning Explorations (Active Project <span class="dot"></span>) <br>
+<tab> Given a McDonald's nutrition dataset, how can we implement linear regression to predict the calories of an item? summary: pdf, pptx | <a href="https://github.com/eemilycchen/A-Primer-On-ML-Models/blob/main/linear_regression.ipynb">source code</a> | <a href="https://eemilycchen.github.io/home/html/building-models-from-scratch/linear_regression.html">html</a> 
 </tab>
+<tab> Langauges and Tools: Python, Seaborn, Statsmodel, Sklearn</tab>
 </p>
 
 <h2><br>RESOURCES</h2> 
