added data visualzations from toy datasets

--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@ Machine Learning Explorations (Active Project <span class="dot"></span>) <br>
 </tab>
 <tab> Langauges and Tools: Python, Seaborn, Statsmodel, Sklearn</tab>
 </p>
+<p>
+<br>
+Data Visualizations with Toy Datasets<br>
+Given college education data, what kind of insights can we draw on the field of study, average starting salary, and gender roles in education? <br>
+
+<section>
+<tableau-viz id="tableauViz"
+src="https://public.tableau.com/views/education_success_insights/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+toolbar="bottom" hide-tabs>
+</tableau-viz>
+</section>
+</p>
 
 <h2><br>RESOURCES</h2> 
 <!-- Cheatsheet section -->
