--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@ Machine Learning Explorations (Active Project <span class="dot"></span>) <br>
 <p>
 <br>
 Data Visualizations with Toy Datasets<br>
-Given college education data, what kind of insights can we draw on the field of study, average starting salary, and gender roles in education? <br>
+<tab>Given college education data, what kind of insights can we draw on the field of study, average starting salary, and gender roles in education? 
+</tab> <br>
+
 
 <section>
 <tableau-viz id="tableauViz"
