added hr_analysis dashboards

--- a/index.html
+++ b/index.html
@@ -163,11 +163,17 @@ Machine Learning Explorations (Active Project <span class="dot"></span>) <br>
 Data Visualizations with Toy Datasets<br>
 <tab>Given college education data, what kind of insights can we draw on the field of study, average starting salary, and gender roles in education? 
 </tab> <br>
-
-
 <section>
 <tableau-viz id="tableauViz"
 src="https://public.tableau.com/views/education_success_insights/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+toolbar="bottom" hide-tabs>
+</tableau-viz>
+</section>
+<br>
+Given HR data, what kind of insights can we draw on employment types and average satisfaction score over the years? <br>
+<section>
+<tableau-viz id="tableauViz"
+src="https://public.tableau.com/views/cleaned_hr_data/HR_Analysis?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
 toolbar="bottom" hide-tabs>
 </tableau-viz>
 </section>
