added tableau cheatsheet

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <p>
 Machine Learning Explorations (Active Project <span class="dot"></span>) <br>
-<tab> Given a McDonald's nutrition dataset, how can we implement linear regression to predict the calories of an item? summary: pdf, pptx | <a href="https://github.com/eemilycchen/A-Primer-On-ML-Models/blob/main/linear_regression.ipynb">source code</a> | <a href="https://eemilycchen.github.io/home/html/building-models-from-scratch/linear_regression.html">html</a> 
+<tab> Given a McDonald's nutrition dataset, how can we implement linear regression to predict the calories of an item? summary: pdf, pptx | <a href="https://github.com/eemilycchen/A-Primer-On-ML-Models/blob/main/linear_regression.ipynb" target="_blank">source code</a> | <a href="https://eemilycchen.github.io/home/html/building-models-from-scratch/linear_regression.html " target="_blank">html</a> 
 </tab>
 <tab> Langauges and Tools: Python, Seaborn, Statsmodel, Sklearn</tab>
 </p>
@@ -181,7 +181,7 @@ toolbar="bottom" hide-tabs>
 
 <h2><br>RESOURCES</h2> 
 <!-- Cheatsheet section -->
-<tab> SQL <a href="https://eemilycchen.github.io/home/cheatsheets/SQL_cheatsheet_mod_6.pdf" target="_blank">pdf</a>, <a href="html/sql_nb.html" target="_blank">html code</a> | R pdf, html code | Excel pdf | Tableau pdf, html </tab>
+<tab> SQL <a href="https://eemilycchen.github.io/home/cheatsheets/SQL_cheatsheet_mod_6.pdf" target="_blank">pdf</a>, <a href="html/sql_nb.html" target="_blank">html code</a> | R pdf, html code | Excel pdf | Tableau <a href="https://eemilycchen.github.io/home/cheatsheets/Tableau_cheatsheet_mod_2.pdf" target="_blank">pdf</a>, html </tab>
 
 
 <h2>WAYS TO REACH ME </h2>
